@@ -19,6 +19,10 @@ in the output clusters.
 find.clusters.pl, into a HTML file. See the docs for details.
 - Rename parameters to new().
 - Add github repo to docs, Build.PL and Makefile.PL.
+- TODO: Things which are not yet implemented:
+o Paths into or out of subgraphs.
+o Paths with a graph (not a digraph) can lead backwards.
+o allow_cycle logic.
 EOT
 
 [V 1.05]
