@@ -14,6 +14,10 @@ Revision history for Perl extension GraphViz2::Marpa::PathUtils.
 		find.clusters.pl, into a HTML file. See the docs for details.
 	- Rename parameters to new().
 	- Add github repo to docs, Build.PL and Makefile.PL.
+	- TODO: Things which are not yet implemented:
+		o Paths into or out of subgraphs.
+		o Paths with a graph (not a digraph) can lead backwards.
+		o allow_cycle logic.
 
 1.05  Wed Jan 29 10:27:00 2014
 	- After calling find_clusters(), sort the result twice: Once for elements within a set and once
